# smart-inbox-openenv

./: .dockerignore  .gitignore  Dockerfile  README.md  baseline_scores.json  generate_golden.py  gym_env.py  inference.py  inference_inbox.py  models.py  my_env_v4.py  openenv.yaml  pyproject.toml  result  simulation_test.py  sync_to_hf.ps1  test_phase1.py  validate-submission.sh
server/: __init__.py  app.py  environment.py  grader.py  tasks.json
tasks/: company_policies.json  definitions.py  generator.py  graders.py  user_context.json
trajectories/: task_easy_1775149423.json  task_easy_1775403491.json  task_easy_1775404257.json  task_easy_1775404835.json  task_hard_1775405788.json  task_hard_1775578129.json  task_medium_1775405225.json  task_medium_1775578129.json
